refactor: Use mock job worker util
Replace the inline utility by the CPT mock job worker.

(cherry picked from commit e6c6c801ea530de7db538df32d82b1cba1f1e563)