@@ -22,7 +22,6 @@ import io.camunda.client.CamundaClient;
 import io.camunda.process.test.api.CamundaProcessTestContext;
 import io.camunda.process.test.api.CamundaSpringProcessTest;
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -43,9 +42,9 @@ public class ProcessUnitTest {
     // given
     final String shippingId = "shipping-1";
 
-    completeJobs("collect-money", Collections.emptyMap());
-    completeJobs("fetch-items", Collections.emptyMap());
-    completeJobs("ship-parcel", Map.of("shipping_id", shippingId));
+    processTestContext.mockJobWorker("collect-money").thenComplete();
+    processTestContext.mockJobWorker("fetch-items").thenComplete();
+    processTestContext.mockJobWorker("ship-parcel").thenComplete(Map.of("shipping_id", shippingId));
 
     final var processInstance =
         client
@@ -81,10 +80,10 @@ public class ProcessUnitTest {
     // given
     final String shippingId = "shipping-2";
 
-    completeJobs("collect-money", Collections.emptyMap());
-    completeJobs("fetch-items", Collections.emptyMap());
-    completeJobs("ship-parcel", Map.of("shipping_id", shippingId));
-    completeJobs("request-tracking-code", Collections.emptyMap());
+    processTestContext.mockJobWorker("collect-money").thenComplete();
+    processTestContext.mockJobWorker("fetch-items").thenComplete();
+    processTestContext.mockJobWorker("ship-parcel").thenComplete(Map.of("shipping_id", shippingId));
+    processTestContext.mockJobWorker("request-tracking-code").thenComplete();
 
     final var processInstance =
         client
@@ -105,13 +104,5 @@ public class ProcessUnitTest {
         .hasCompletedElements(byName("Request tracking code"))
         .hasActiveElements(byName("Received tracking code"))
         .isActive();
-  }
-
-  private void completeJobs(final String jobType, final Map<String, Object> variables) {
-    client
-        .newWorker()
-        .jobType(jobType)
-        .handler((jobClient, job) -> jobClient.newCompleteCommand(job).variables(variables).send())
-        .open();
   }
 }
